Resolved problem with hiding overflow, changed social media links

--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -1,4 +1,4 @@
-$base-color: rgb(130 129 101 / 90%);
+$base-color: #93a377e6;
 $on-hover-color: #27a0e2;
 $bg-color: #c6b9b940;
 $text-color: #9d9a9a;
